# Nolan

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
config/: envoy.yaml  valkey-acl.conf.template  valkey.conf
control-plane/: Dockerfile  go.mod  go.sum
control-plane/cmd/control-plane/: main.go
control-plane/internal/api/: handlers.go  middleware.go  routes.go
control-plane/internal/config/: config.go
control-plane/internal/db/: repository.go
control-plane/internal/model/: job.go
control-plane/internal/queue/: producer.go
control-plane/internal/reaper/: reaper.go
control-plane/internal/storage/: minio.go
migrations/: 001_init.sql
proto/: buf.gen.yaml  buf.yaml
proto/pipeline/v1/: transcode.proto
scripts/: e2e-test.ps1  gen-secrets.ps1  gen-secrets.sh  init-valkey.sh  stress-test.ps1
worker/: Cargo.toml  Dockerfile  build.rs
worker/.cargo/: config.toml
worker/src/: config.rs  consumer.rs  error.rs  idempotency.rs  main.rs  pipeline.v1.rs  storage.rs  transcode.rs
