[package]
name = "nolan-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Distributed video transcode worker for the Nolan pipeline"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-types = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
prost = "0.13"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ulid = "1"
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
